2003-01-15  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing 1.0.2alpha3.

2003-01-13  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing 1.0.2alpha2.

2003-01-11  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/protocols/shoutcast.py: add client support for
	Shoutcast MP3 streaming protocol.

2003-01-10  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/scripts/twistd.py: in debug mode, jump into debugger for any
	logged exception.

2003-01-10  Dave Peticolas  <dave@krondo.com>

	* twisted/trial/unittest.py: enable test cruft checking

	* twisted/test/test_policies.py: cleanup timers

	* twisted/protocols/policies.py: start/stop bandwidth timers as needed

	* twisted/test/test_internet.py: cleanup timers

	* twisted/test/test_woven.py: expire sessions to clean up timers

	* twisted/web/woven/guard.py: stop timer when session expires

2003-1-9  Moshe Zadka <moshez@twistedmatrix.com>

	* twisted/web/google.py: Search google for best matches

2003-01-09  Dave Peticolas  <dave@krondo.com>

	* twisted/protocols/http.py: start/stop log timer as needed

2003-01-08  Dave Peticolas  <dave@krondo.com>

	* twisted/test/test_smtp.py: cleanup timers after test

	* twisted/trial/unittest.py: keep errors that are logged and
	submit them as test failures when tests are finished.

	* twisted/python/log.py: if errors are being kept, don't print
	them

2003-1-8  Moshe Zadka <moshez@twistedmatrix.com>

	* doc/man/trial.1 twisted/scripts/trial.py: Add -l/--logfile argument
	to allow giving a log file.

	* twisted/trial/unittest.py: add SkipTest exception, which tests can
	raise in their various test* method to skip a test which is not
	excpected to pass.

2003-01-08  Jonathan M. Lange  <jml@mumak.net>

	* twisted/trial/*, bin/trial, twisted/scripts/trial.py,
	doc/man/trial.1: Added 'trial', a new unit testing framework for
	Twisted.

	* twisted/test/test_*, admin/runtests: Moved existing tests over to
	trial.
