@@ -11,6 +11,9 @@ trial loads and executes a suite of unit tests, obtained from modules and
 packages listed on the command line.
 The \fB\--help\fR option prints out a usage message to standard output.
 .TP
+\fB-s\fR, \fB--summary\fR
+Print out just a machine-parseable summary of the results.
+.TP
 \fB-v\fR, \fB--verbose\fR
 Be more verbose. Without this option, trial prints out a single character 
 for each test. (e.g. An 'F' for a failure, A '.' for a success). With this
